connection string changed

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
-db1.datasource.url=jdbc:postgresql://yugandharpostgres.postgres.database.azure.com/demo
-db1.datasource.username=yugandhar
-db1.datasource.password=Pass123@
+db1.datasource.url=jdbc:postgresql://localhost:5432/mydb
+db1.datasource.username=root
+db1.datasource.password=system
 db1.datasource.driver-class-name=org.postgresql.Driver
 
 
 #db2 config
-spring.data.mongodb.uri=mongodb+srv://yugandhar:pass123@cluster1.ybqcamf.mongodb.net/demo
+spring.data.mongodb.uri=mongodb://localhost:27017/newdb
 
